<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.muva.bamburi.activities.auth.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/bamburi_baobab_logo"
                android:contentDescription="@string/bamburi_logo" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                app:cardElevation="20dp"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/ic_account_circle_teal_400_24dp"
                        android:drawableStart="@drawable/ic_account_circle_teal_400_24dp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_lock_teal_400_24dp"
                            android:drawableStart="@drawable/ic_lock_teal_400_24dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:textColor="@android:color/black"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginRight="16dp" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:elevation="15dp">

                <ImageView
                    android:layout_width="153dp"
                    android:layout_height="57dp"
                    android:contentDescription="@string/lafargeholcim_logo"
                    android:scaleType="fitStart"
                    android:src="@drawable/lafargeholcim_logo" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
