<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".force_update.NetworkFailureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/no_internet_connection"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="80dp"
            android:src="@drawable/ic_signal_wifi_0_bar_black_24dp"
            android:layout_marginBottom="16dp"
            android:tint="@color/black_overlay"
            android:layout_gravity="center"
            android:layout_height="80dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/check_your_mobile_data_or_wifi"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tryNetwoekBtn"
            android:layout_width="match_parent"
            android:backgroundTint="@color/black_overlay"
            android:text="@string/Retry"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>